# HamShack

./: .env.example  .gitignore  Makefile  README.md
backend/: Cargo.toml  test_build.sh
backend/src/: cache.rs  config.rs  main.rs  sdr.rs  websocket.rs
frontend/src/: App.css  App.jsx
frontend/src/components/: Waterfall.jsx
frontend/src/hooks/: useSSE.js
scripts/: install-deps.sh  setup-pi.sh  test-installation.sh
