[package]
name = "hamshack"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP/2 and SSE support
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
tower = "0.4"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration management
config = "0.13"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Caching
lru = "0.12"

# Real-time data structures
crossbeam-channel = "0.5"

# SSE support
tokio-stream = "0.1"

# SDR support
num-complex = "0.4"

# Signal processing
rustfft = "6.2"

# Audio/visual processing
hound = "3.5"

# Threading utilities
rayon = "1.10"

# Random number generation
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true