[package]
name = "hamshack"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.49", features = ["full"] }

# HTTP/2 and SSE support
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
tower = "0.4"

# Static file serving
tower-http = { version = "0.5", features = ["fs"] }

# WebSocket support
tokio-tungstenite = "0.20"

# Protocol Buffers
prost = "0.12"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Satellite tracking
satkit = "0.3"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Stream utilities
tokio-stream = "0.1"

# Futures
futures = "0.3"

# Crossbeam channel for thread communication
crossbeam-channel = "0.5"

# FFT processing
rustfft = "6.4"

# Complex numbers
num-complex = "0.4"

# Numerical traits
num-traits = "0.2"

# Configuration loading
config = "0.13"
dotenvy = "0.15"

# Logging
tracing-subscriber = "0.3"

# Threading utilities
rayon = "1.10"

# Random number generation
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true